--- a/app/views/lecturers/_index_search.html.haml
+++ b/app/views/lecturers/_index_search.html.haml
@@ -2,6 +2,8 @@
   %tr.search_row{style: "display: none;"}
     %td= f.text_field :name_cont, :class => "form-control"
     %td= f.text_field :mykadno_search, :class => "form-control"
+    %td= f.text_field :phone_search, :class => "form-control"
+    %td= f.text_field :email_search, :class => "form-control"
     %td= f.text_field :position_search, :class => "form-control"
     %td= f.text_field :rate_eq, :class => "form-control", placeholder: "in RM"
     %td= f.text_field :qualifications_search, :class => "form-control"
