--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -2,9 +2,9 @@
   = form_for @location, :html => { :class => 'form-horizontal' }  do |f|
     = render 'shared/error_messages', object: f.object
 
-    .control-group
-      = f.label  t('activerecord.attributes.location.region'), :class => 'control-label'
-      .controls= f.select :region, DropDown::REGION,:include_blank => (t 'helpers.select'),  :class => 'selectpicker'
+    /.control-group
+    /  = f.label  t('activerecord.attributes.location.region'), :class => 'control-label'
+    /  .controls= f.select :region, DropDown::REGION,:include_blank => (t 'helpers.select'),  :class => 'selectpicker'
 
     .control-group
       = f.label  t('activerecord.attributes.location.name'), :class => 'control-label'
