--- a/app/views/locations/_index_search.html.haml
+++ b/app/views/locations/_index_search.html.haml
@@ -1,6 +1,6 @@
 = search_form_for @search, url: locations_path, class: "form-inline" do |f|
   %tr.search_row{style: "display: none;"}
-    %td= select_tag('q[region_eq]',options_for_select([[(t 'actions.all_records'),''],['Southern', 1],['Northern', 2],['Eastern', 3],['Sabah', 4],['Sarawak', 5]]), class: 'selectpicker',"data-width"=>'100px')
+    /%td= select_tag('q[region_eq]',options_for_select([[(t 'actions.all_records'),''],['Southern', 1],['Northern', 2],['Eastern', 3],['Sabah', 4],['Sarawak', 5]]), class: 'selectpicker',"data-width"=>'100px')
     %td= f.text_field :name_cont, :class => "form-control"
     %td
       .input-group
