--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -2,22 +2,30 @@
   = form_for @customer, :html => { :class => 'form-horizontal' }  do |f|
     = render 'shared/error_messages', object: f.object
 
-    .control-group
-      = f.label  t('activerecord.attributes.customer.id_no'), :class => 'control-label'
-      .controls= f.text_field :id_no, :class => 'text_field '
-
+    
     .control-group
       = f.label  t('activerecord.attributes.customer.name'), :class => 'control-label'
       .controls= f.text_field :name, :class => 'text_field input-xxlarge'
 
     .control-group
-      = f.label t('activerecord.attributes.customer.email'), :class => 'control-label'
-      .controls= f.text_field :email, :class => 'text_field input-xxlarge'
+      = f.label  t('activerecord.attributes.customer.id_no'), :class => 'control-label'
+      .controls
+        = f.text_field :id_no, :class => 'text_field '
+        .small
+          =t('activerecord.attributes.customer.armed_force_no_mykad')
+          &nbsp;(Sample: 800101012256 or 8011)
+    .control-group
+      = f.label t('activerecord.attributes.customer.position'), :class => 'control-label'
+      .controls= f.text_field :position, :class => 'text_field input-xxlarge'   
 
     .control-group
       = f.label  t('activerecord.attributes.customer.phone'), :class => 'control-label'
       .controls= f.text_field :phone, :class => 'text_field input-xxlarge'
-
+       
+    .control-group
+      = f.label t('activerecord.attributes.customer.email'), :class => 'control-label'
+      .controls= f.text_field :email, :class => 'text_field input-xxlarge'
+ 
     .control-group
       = f.label  t('activerecord.attributes.customer.corporate'), :class => 'control-label'
       .controls
