--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -15,11 +15,12 @@
   %thead
     %tr
       %th{width: "8%"}=t('activerecord.attributes.course.code')
-      %th{width: "15%"}=t('activerecord.attributes.course.category')
-      %th{width: "25%"}=t('activerecord.attributes.course.topic')
+      %th{width: "16%"}=t('activerecord.attributes.course.organizer')
+      %th{width: "10%"}=t('activerecord.attributes.course.category')
+      %th{width: "20%"}=t('activerecord.attributes.course.topic')
       %th{width: "30%"}=t('activerecord.attributes.course.description')
       %th{width: "10%"}=t('activerecord.attributes.course.fee')
-      %th{width: "12%"}=t('activerecord.attributes.course.duration')
+      %th{width: "6%"}=t('activerecord.attributes.course.duration')
       /%th User
       /%th College
       /%th Data
@@ -29,6 +30,7 @@
     - @courses.each do |course|
       %tr
         %td= course.code
+        %td= course.try(:course_organizer) unless course.organizer.blank?
         %td= course.category
         %td= course.topic
         %td= course.description
