Schedule pages-minor fixes

--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -4,9 +4,9 @@
   %h1= t('activerecord.attributes.location..title')
 %p#notice= notice
 
-%dl.dl-horizontal
-  %dt= t('activerecord.attributes.location.region')+":"
-  %dd= @location.try(:region_details)
+/ %dl.dl-horizontal
+/   %dt= t('activerecord.attributes.location.region')+":"
+/   %dd= @location.try(:region_details)
 
 %dl.dl-horizontal
   %dt= t('activerecord.attributes.location.name')+":"
