--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -20,7 +20,7 @@
 
     .control-group
       = f.label t('activerecord.attributes.course.topic'), :class => 'control-label'
-      .controls= f.text_field :topic, :class => 'text_field input-xxlarge'
+      .controls= f.text_field :topic, :class => 'text_field input-xxlarge mandatory'
 
     .control-group
       = f.label  t('activerecord.attributes.course.description'), :class => 'control-label'
