--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -8,7 +8,7 @@
 
     .control-group
       = f.label  t('activerecord.attributes.location.name'), :class => 'control-label'
-      .controls= f.text_field :name, :class => 'text_field '
+      .controls= f.text_field :name, :class => 'text_field mandatory'
 
     .control-group
       = f.label  t('activerecord.attributes.location.description'), :class => 'control-label'
