--- a/app/views/bookings/show.html.haml
+++ b/app/views/bookings/show.html.haml
@@ -10,11 +10,11 @@
 
 %dl.dl-horizontal
   %dt= t('activerecord.attributes.booking.schedule_id')+":"
-  %dd= @booking.schedule_id
+  %dd= @booking.schedule.schedule_course_details
 
 %dl.dl-horizontal
   %dt= t('activerecord.attributes.booking.customer_id')+":"
-  %dd= @booking.customer_id
+  %dd= @booking.participant.id_no_with_name_position
 
 %dl.dl-horizontal
   %dt= t('activerecord.attributes.booking.payment_id')+":"
