--- a/app/views/companies/_form.html.haml
+++ b/app/views/companies/_form.html.haml
@@ -9,7 +9,7 @@
 
     .control-group
       = f.label (t 'activerecord.attributes.company.name'), :class => 'control-label'
-      .controls= f.text_field :name, :class => 'text_field '
+      .controls= f.text_field :name, :class => 'text_field mandatory'
     .control-group
       = f.label (t 'activerecord.attributes.company.address'), :class => 'control-label'
       .controls= f.text_field :address, :class => 'text_field '
