--- a/app/views/bookings/index.html.haml
+++ b/app/views/bookings/index.html.haml
@@ -18,8 +18,7 @@
       %th{width: '7%'}=t 'activerecord.attributes.booking.code'
       %th{width: '30%'}=t 'activerecord.attributes.booking.schedule_id'
       %th{width: '23%'}=t 'activerecord.attributes.booking.customer_id'
-      %th{width: '10%'}=t 'activerecord.attributes.booking.payment_id'
-      %th{width: '15%'}=t 'activerecord.attributes.booking.warranty_id'
+      %th{width: '25%'}=t 'activerecord.attributes.booking.warranty_id'
       %th{width: '15%'}Status 
       /%th User 
       /%th College 
@@ -34,16 +33,16 @@
           = booking.schedule.schedule_course_details
           .small
             - unless booking.schedule.schedulecourse.nil? 
-              - unless booking.schedule.schedulecourse.course_organizer.nil?
+              - unless booking.schedule.schedulecourse.organizer.blank?
                 ="("+(t 'activerecord.attributes.schedule.organized_by')
                 %b= booking.schedule.try(:schedulecourse).try(:course_organizer) 
-                - unless booking.schedule.schedulecourse.owner.nil?
+                - unless booking.schedule.schedulecourse.owner.blank?
                   =(t 'activerecord.attributes.schedule.for')
                   %b= booking.schedule.try(:schedulecourse).try(:course_owner) 
                 =" )" unless booking.schedule.schedulecourse.course_organizer.nil? && booking.schedule.schedulecourse.owner.nil?
+            
 
-        %td= booking.participant.try(:name)
-        %td= booking.payment_id 
+        %td= booking.participant.try(:id_no_with_name)
         %td= booking.warranty_id
         %td= booking.status 
         /%td= booking.user_id 
